--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,30 +1,82 @@
 site_name: JTURPCM4 SOP Documentation
-
-theme:
-  name: material
-
-  logo: assets/JTLOGO.png
-  favicon: assets/JTLOGO.png
-
-
-
-  features:
-    - content.code.copy
-    - content.code.select
-    - navigation.instant
-    - navigation.tracking
-    - navigation.sections
-
-markdown_extensions:
-  - admonition
-  - pymdownx.superfences
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.details
-  - pymdownx.tabbed:
-      alternate_style: true
-
-
+site_description: Device provisioning and configuration manual
+site_author: Saikat Dey
 
 copyright: |
   © 2026 — Made by Saikat Dey
+
+theme:
+  name: material
+  language: en
+
+  logo: assets/JTLOGO.png
+  favicon: assets/favicon.png
+
+  palette:
+
+    # DARK MODE (default)
+    - scheme: slate
+      primary: black
+      accent: cyan
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+
+    # LIGHT MODE
+    - scheme: default
+      primary: indigo
+      accent: blue
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+
+  font:
+    text: Inter
+    code: JetBrains Mono
+
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.sections
+    - navigation.expand
+    - navigation.top
+    - toc.follow
+    - header.autohide
+    - search.highlight
+    - search.suggest
+    - content.code.copy
+    - content.code.select
+    - content.tabs.link
+
+nav:
+  - Home: index.md
+
+markdown_extensions:
+  - admonition
+  - attr_list
+  - md_in_html
+
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.details
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.snippets
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+
+extra_css:
+  - stylesheets/extra.css
+
+extra_javascript:
+  - javascripts/extra.js
+
+plugins:
+  - search
+
